--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,9 @@
     </div>
 </div>
 <script src="js/angular.js"></script>
+<!-- build:js lib/jquery.min.js -->
 <script src='js/jquery.js'></script>
+<!-- endbuild -->
 <script src='js/nicescroll.js'></script>
 <script src="js/index.js"></script>
 <!--<script src = "/socket.io/socket.io.js"></script>-->
